force-app/main/default/objects/Volunteer_Activity_Participant__c/Volunteer_Activity_Participant__c.object-meta.xml
<CustomObject>
    <customHelpPage>HelpParticipant</customHelpPage>
    <description>A junction object used for linking Volunteer Activities to a participant in the activity and to the participant&#39;s role hierarchy at the time of the activity</description>
    <label>Volunteer Participant</label>
    <nameField>
        <displayFormat>Participant ID: {000000}</displayFormat>
        <label>Volunteer Activity Participant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>