force-app/main/default/objects/Volunteer_Activity_Participant__c/fields/Activity_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Activity_DateTime__c</fullName>
    <formula>Volunteer_Activity__r.Date_and_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>