force-app/main/default/objects/Volunteer_Activity_Participant__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>This field is used only for reporting and is hidden from the end user.  It is maintained by apex code by copying the values from the user record when participant is added and when the User record changes.</description>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Unit A</fullName>
            </value>
            <value>
                <fullName>Business Unit B</fullName>
            </value>
            <value>
                <fullName>Business Unit C</fullName>
            </value>
            <value>
                <fullName>Business Unit D</fullName>
            </value>
            <value>
                <fullName>Business Unit E</fullName>
            </value>
            <value>
                <fullName>Business Unit F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>