force-app/main/default/objects/Volunteer_Activity_Participant__c/fields/Duration_hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_hours__c</fullName>
    <description>If left blank, this field is updated programmatically when new volunteer activity participants are created.</description>
    <inlineHelpText>If left blank, this field is updated based on the Activity duration.</inlineHelpText>
    <label>Participation (hours)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>