force-app/main/default/objects/Volunteer_Activity_Participant__c/fields/IsCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentUser__c</fullName>
    <description>Used by the &quot;My Volunteering&quot; report to only return the Volunteer Activity Participant records that the current user has signed up for.</description>
    <formula>IF(User__c=$User.Id, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used by the &quot;My Volunteering&quot; report.</inlineHelpText>
    <label>IsCurrentUser</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>