force-app/main/default/objects/Volunteer_Activity_Participant__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id,  User__r.FirstName &amp; &quot; &quot; &amp; User__r.LastName, &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant</label>
    <type>Text</type>
</CustomField>