force-app/main/default/objects/Volunteer_Activity_Participant__c/fields/Participant_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Participant_Mobile_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Participant Mobile Phone</label>
    <type>Phone</type>
</CustomField>