force-app/main/default/objects/Volunteer_Activity_Participant__c/fields/Participant_Special_Needs__c.field-meta.xml
<CustomField>
    <fullName>Participant_Special_Needs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Participant Special Needs</label>
    <type>TextArea</type>
</CustomField>