force-app/main/default/objects/Volunteer_Activity_Participant__c/fields/Volunteer_Activity__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Activity__c</fullName>
    <label>Volunteer Activity</label>
    <referenceTo>Volunteer_Activity__c</referenceTo>
    <relationshipName>R00N30000002ECnNEAW</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>