force-app/main/default/objects/Volunteer_Activity_Participant__c/validationRules/Duration_hours_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Duration_hours_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Duration_hours__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Duration_hours__c</errorDisplayField>
    <errorMessage>Participation hours cannot be a negative value.</errorMessage>
</ValidationRule>