force-app/main/default/objects/Volunteer_Activity_Participant__c/validationRules/Max_hours_Participant.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_hours_Participant</fullName>
    <active>true</active>
    <description>Particpant max hours cannot be larger than the established in the Activity Duration</description>
    <errorConditionFormula>Duration_hours__c &gt; Volunteer_Activity__r.Duration_hours__c</errorConditionFormula>
    <errorDisplayField>Duration_hours__c</errorDisplayField>
    <errorMessage>Duration cannot exceed Activity Duration</errorMessage>
</ValidationRule>